--- a/VE_Xplorer/VE_XplorerLib.vcproj
+++ b/VE_Xplorer/VE_XplorerLib.vcproj
@@ -277,6 +277,9 @@
 			Name="src"
 			Filter=".cpp">
 			<File
+				RelativePath=".\CADAddNodeEH.cxx">
+			</File>
+			<File
 				RelativePath=".\CADEventHandler.cxx">
 			</File>
 			<File
@@ -436,6 +439,9 @@
 		<Filter
 			Name="headers"
 			Filter=".h">
+			<File
+				RelativePath=".\CADAddNodeEH.h">
+			</File>
 			<File
 				RelativePath=".\CADEventHandler.h">
 			</File>
