fixing update transform and adding attribute list to model

--- a/VE_Xplorer/VE_XplorerHandlers/Makefile.xplorerlib
+++ b/VE_Xplorer/VE_XplorerHandlers/Makefile.xplorerlib
@@ -105,6 +105,7 @@ SRCS=\
    cfdWriteTraverser.cxx \
    cfdObjectHandler.cxx \
    CADEventHandler.cxx \
+   CADAddNodeEH.cxx 
    CADTransformEH.cxx 
 
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME) 
