changes to allow factory to create CAD objects

--- a/VE_Open/XML/CAD/Makefile
+++ b/VE_Open/XML/CAD/Makefile
@@ -37,6 +37,7 @@ SRCS=\
    CADAssembly.cxx\
    CADAttribute.cxx\
    CADClone.cxx\
+   CADCreator.cxx\
    CADMaterial.cxx\
    CADNode.cxx\
    CADNodeTraverser.cxx\
