correction for building

--- a/VE_Open/XML/Shader/Makefile
+++ b/VE_Open/XML/Shader/Makefile
@@ -38,7 +38,7 @@ SRCS=\
    Uniform.cxx\
    Program.cxx\
    Shader.cxx \
-   ShaderCreator.cxx \
+   ShaderCreator.cxx 
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 DSO_PLUGIN_DEPS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_XMLLib
