--- a/VE_SceneGraph/Makefile
+++ b/VE_SceneGraph/Makefile
@@ -50,6 +50,7 @@ endif
 #__________________________________________________________
 # list the source files that are in current directory
 SRCS=\
+   Attribute.cxx \
    cfdClone.cxx \
    cfdDCS.cxx \
    cfdGeode.cxx \
