--- a/VE_SceneGraph/Makefile.scenegraphlib
+++ b/VE_SceneGraph/Makefile.scenegraphlib
@@ -51,6 +51,7 @@ endif
 #__________________________________________________________
 # list the source files that are in current directory
 SRCS=\
+   Attribute.cxx \
    cfdClone.cxx \
    cfdDCS.cxx \
    cfdGeode.cxx \
