--- a/examples/SampleMFC_Gauges/SampleMFC_GaugesUnit/SampleMFC_GaugesUnit.vcproj
+++ b/examples/SampleMFC_Gauges/SampleMFC_GaugesUnit/SampleMFC_GaugesUnit.vcproj
@@ -20,7 +20,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(VE_SUITE_HOME)&quot;;&quot;$(VE_SUITE_HOME)\VE_Conductor\Framework&quot;;&quot;$(VE_SUITE_HOME)\VEOpen\skel&quot;"
+				AdditionalIncludeDirectories="&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(VE_SUITE_HOME)&quot;;&quot;$(VE_SUITE_HOME)\VE_Conductor\Framework&quot;;&quot;$(VE_SUITE_HOME)\VE_Open\skel&quot;"
 				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG;WINVER=0x400;_MT;_REENTRANT;_STLP_USE_OWN_NAMESPACE"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -39,10 +39,10 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib xerces-c_2D.lib rpcrt4.lib odbc32.lib odbccp32.lib comctl32.lib wsock32.lib ole32.lib oleaut32.lib GUIPlugin_d.lib VE_ConductorLib_d.lib"
+				AdditionalDependencies="ws2_32.lib aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib TAO_AnyTypeCoded.lib xerces-c_2D.lib rpcrt4.lib odbc32.lib odbccp32.lib comctl32.lib wsock32.lib ole32.lib oleaut32.lib GUIPlugin_d.lib VE_ConductorLib_d.lib"
 				OutputFile="..\Units\SampleMFCUnit.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(TAO_ROOT)\tao&quot;;&quot;$(TAO_ROOT)\orbsvcs\orbsvcs&quot;;&quot;$(TAO_ROOT)\tao\PortableServer&quot;;&quot;$(XERCESCROOT)\Build\Win32\VC7\Debug&quot;;&quot;$(ACE_ROOT)\ace&quot;;&quot;$(ACE_ROOT)\lib&quot;;&quot;$(ACE_ROOT)\bin&quot;;&quot;$(VE_SUITE_HOME)\lib\win32&quot;"
+				AdditionalLibraryDirectories="&quot;$(TAO_ROOT)\tao&quot;;&quot;$(TAO_ROOT)\orbsvcs\orbsvcs&quot;;&quot;$(TAO_ROOT)\tao\PortableServer&quot;;&quot;$(XERCESCROOT)\Build\Win32\VC7.1\Debug&quot;;&quot;$(ACE_ROOT)\ace&quot;;&quot;$(ACE_ROOT)\lib&quot;;&quot;$(ACE_ROOT)\bin&quot;;&quot;$(VE_SUITE_HOME)\lib\win32&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile=".\Debug/SampleMFCUnit.pdb"
 				SubSystem="2"
@@ -130,6 +130,70 @@
 			<Tool
 				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
+		<Configuration
+			Name="install_osg_dbg|Win32"
+			OutputDirectory="$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="1"
+			UseOfMFC="2"
+			CharacterSet="2">
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				AdditionalIncludeDirectories="&quot;$(VE_DEPS_DIR)\include&quot;;&quot;$(VE_DEPS_DIR)\include\tao&quot;;&quot;$(VE_DEPS_DIR)\include\tao\orbsvcs&quot;;&quot;$(VE_DEPS_DIR)\include\xercesc&quot;;&quot;$(VE_INSTALL_DIR)\include&quot;;&quot;$(VE_INSTALL_DIR)\include\VEOpen\skel&quot;"
+				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG;WINVER=0x400;_MT;_REENTRANT;_STLP_USE_OWN_NAMESPACE"
+				MinimalRebuild="TRUE"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="3"
+				TreatWChar_tAsBuiltInType="FALSE"
+				RuntimeTypeInfo="TRUE"
+				UsePrecompiledHeader="0"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation=".\Debug/"
+				ObjectFile=".\Debug/"
+				ProgramDataBaseFileName=".\Debug/"
+				WarningLevel="3"
+				Detect64BitPortabilityProblems="TRUE"
+				DebugInformationFormat="4"/>
+			<Tool
+				Name="VCCustomBuildTool"/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="ws2_32.lib aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib xerces-c_2D.lib rpcrt4.lib odbc32.lib odbccp32.lib comctl32.lib wsock32.lib ole32.lib oleaut32.lib GUIPlugin_d.lib VE_ConductorLib_d.lib"
+				OutputFile="..\Units\SampleMFCUnit.exe"
+				LinkIncremental="2"
+				AdditionalLibraryDirectories="&quot;$(VE_DEPS_DIR)\lib\win32&quot;;&quot;$(VE_INSTALL_DIR)\lib\win32&quot;"
+				GenerateDebugInformation="TRUE"
+				ProgramDatabaseFile=".\Debug/SampleMFCUnit.pdb"
+				SubSystem="2"
+				TargetMachine="1"/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="_DEBUG"
+				MkTypLibCompatible="FALSE"
+				TypeLibraryName="$(IntDir)/$(ProjectName).tlb"/>
+			<Tool
+				Name="VCPostBuildEventTool"/>
+			<Tool
+				Name="VCPreBuildEventTool"/>
+			<Tool
+				Name="VCPreLinkEventTool"/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="_DEBUG"
+				Culture="1033"
+				AdditionalIncludeDirectories="$(IntDir)"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
+				Name="VCWebDeploymentTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+		</Configuration>
 	</Configurations>
 	<References>
 	</References>
@@ -142,10 +206,10 @@
 				RelativePath=".\ExcelWrapper.cpp">
 			</File>
 			<File
-				RelativePath="..\..\..\..\VE_Suite\VEOpen\skel\moduleC.cpp">
+				RelativePath="..\..\..\..\..\VE_Suite.0.9.3\include\VEOpen\skel\moduleC.cpp">
 			</File>
 			<File
-				RelativePath="..\..\..\..\VE_Suite\VEOpen\skel\moduleS.cpp">
+				RelativePath="..\..\..\..\..\VE_Suite.0.9.3\include\VEOpen\skel\moduleS.cpp">
 			</File>
 			<File
 				RelativePath=".\SampleMFC_GaugesUnit_client.cpp">
