--- a/VE_Xplorer/VE_XplorerHandlers/Makefile
+++ b/VE_Xplorer/VE_XplorerHandlers/Makefile
@@ -106,6 +106,7 @@ SRCS=\
    cfdObjectHandler.cxx \
    CADEventHandler.cxx \
    CADAddNodeEH.cxx \
+   CADAddAttributeEH.cxx \
    CADTransformEH.cxx 
 
 			
