new addition to allow the model namespace to read/written by veopen classes

--- a/VE_Open/XML/Model/Makefile
+++ b/VE_Open/XML/Model/Makefile
@@ -39,8 +39,8 @@ SRCS=\
    Link.cxx\
    Network.cxx\
    Model.cxx\
-   Tag.cxx
-
+   Tag.cxx\
+   ModelCreator.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 #EXTRA_INCLUDES+= -I$(VJ_DEPS_DIR)/include
