--- a/VE_Builder/vtkTo3DTexture/tcGUI/tcGUI.vcproj
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/tcGUI.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(WX_HOME)\include&quot;;&quot;$(VTK_HOME)\include\vtk&quot;;&quot;$(WX_HOME)\lib\vc_dll\mswd&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VE_SUITE_HOME)&quot;"
+				AdditionalIncludeDirectories="&quot;$(WX_HOME)\include&quot;;&quot;$(VTK_HOME)\include\vtk-5.0&quot;;&quot;$(WX_HOME)\lib\vc_dll\mswd&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VE_SUITE_HOME)&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;WINVER=0x400"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
@@ -36,7 +36,7 @@
 				AdditionalDependencies="wxbase26d.lib wxmsw26d_core.lib vtkCommon.lib vtkRendering.lib vtkGraphics.lib vtkIO.lib vtkFiltering.lib VE_UtilLib_d.lib libboost_filesystem-vc71-mt-gd-1_32.lib"
 				OutputFile="$(OutDir)/vtkTo3DTextured.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(WX_HOME)\lib\vc_dll&quot;;&quot;$(VTK_HOME)\lib\vtk&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(VE_SUITE_HOME)\lib\win32&quot;"
+				AdditionalLibraryDirectories="&quot;$(WX_HOME)\lib\vc_dll&quot;;&quot;$(VTK_HOME)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(VE_SUITE_HOME)\lib\win32&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/tcGUI.pdb"
 				SubSystem="2"
